[gd_scene load_steps=12 format=3 uid="uid://xvsfhcjbtv78"]

[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/pause_menu_controller.gd" id="1_eith5"]
[ext_resource type="PackedScene" path="res://scenes/overlaid_menus/pause_menu.tscn" id="2_t1x8u"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/level_list_loader.gd" id="3_8hj4w"]
[ext_resource type="PackedScene" path="res://addons/maaacks_game_template/base/scenes/music_players/background_music_player.tscn" id="4_adx3u"]
[ext_resource type="PackedScene" path="res://scenes/loading_screen/level_loading_screen.tscn" id="5_tmshr"]
[ext_resource type="Script" path="res://scenes/game_scene/configurable_sub_viewport.gd" id="6_2ng5m"]
[ext_resource type="Script" path="res://scenes/game_scene/input_display_label.gd" id="7_4cavp"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/extras/scripts/level_list_manager.gd" id="8_gr0jr"]
[ext_resource type="PackedScene" path="res://scenes/overlaid_menus/game_won_overlaid_menu.tscn" id="9_juvg4"]
[ext_resource type="PackedScene" path="res://scenes/overlaid_menus/level_lost_overlaid_menu.tscn" id="10_irv7a"]
[ext_resource type="PackedScene" path="res://scenes/overlaid_menus/level_won_overlaid_menu.tscn" id="11_l3rc7"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuController" type="Node" parent="."]
script = ExtResource("1_eith5")
pause_menu_packed = ExtResource("2_t1x8u")

[node name="LevelLoader" type="Node" parent="." node_paths=PackedStringArray("level_container")]
script = ExtResource("3_8hj4w")
level_container = NodePath("../ViewportContainer/ConfigurableSubViewport")
files = Array[String](["res://scenes/game_scene/levels/level_1.tscn", "res://scenes/game_scene/levels/level_2.tscn", "res://scenes/game_scene/levels/level_3.tscn"])
directory = "res://scenes/game_scene/levels"

[node name="BackgroundMusicPlayer" parent="." instance=ExtResource("4_adx3u")]

[node name="LevelLoadingScreen" parent="." instance=ExtResource("5_tmshr")]
visible = false

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="ConfigurableSubViewport" type="SubViewport" parent="ViewportContainer"]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1280, 720)
render_target_update_mode = 4
script = ExtResource("6_2ng5m")

[node name="InputDisplayLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -44.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
autowrap_mode = 2
script = ExtResource("7_4cavp")

[node name="LevelListManager" type="Node" parent="." node_paths=PackedStringArray("level_list_loader", "level_loading_screen")]
script = ExtResource("8_gr0jr")
level_list_loader = NodePath("../LevelLoader")
main_menu_scene = "res://scenes/menus/main_menu/main_menu_with_animations.tscn"
ending_scene = "res://scenes/end_credits/end_credits.tscn"
level_loading_screen = NodePath("../LevelLoadingScreen")
game_won_scene = ExtResource("9_juvg4")
level_lost_scene = ExtResource("10_irv7a")
level_won_scene = ExtResource("11_l3rc7")

[connection signal="level_load_started" from="LevelLoader" to="." method="_on_level_loader_level_load_started"]
[connection signal="level_loaded" from="LevelLoader" to="." method="_on_level_loader_level_loaded"]
[connection signal="levels_finished" from="LevelLoader" to="." method="_on_level_loader_levels_finished"]
